ниче не работает

--- a/webapp/views/Form.hbs
+++ b/webapp/views/Form.hbs
@@ -13,7 +13,7 @@
 
 <body>
 	
-<form action="MainPage.html" method="POST">
+<form method="POST">
 	<h1 align="center">Анкета пользователя</h1>
 	<fieldset>
 		<legend>Заполните анкету</legend>
