--- a/webapp/views/Form.hbs
+++ b/webapp/views/Form.hbs
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script>
-		function save(){
-		sessionStorage.login = document.getElementById("login").value; 
-		window.alert("secusess");
-		}
-	</script>
-	<meta charset="utf-8">
+		<meta charset="utf-8">
 <title>Анкета пользователя</title>
 </head>
 
 <body>
 	
-<form method="POST">
+<form action="/" method="POST">
 	<h1 align="center">Анкета пользователя</h1>
 	<fieldset>
 		<legend>Заполните анкету</legend>
 		<label>
 			<h3>Имя пользователя</h3>
-			<input class="btn" type="text" id="login" maxlength="15" size="40" placeholder="Введите логин" />
+			<input class="btn" type="text" name="login" maxlength="15" size="40" placeholder="Введите логин" />
 		</label>
 		<label>
-			<h3>Пороль</h3>
-			<input class="btn" type="date" maxlength="25" size="40" name="Date"  placeholder="Дата рождения" />
+			<h3>Возраст</h3>
+			<input class="btn" type="date" maxlength="25" size="40" name="date"  placeholder="Дата рождения" />
 		</label>
 
 		<h3></h3>
 		
-        <input type="submit" value="Отправить" size="40" onclick="save()"/>
+        <input type="submit" value="Отправить" size="40" />
 	</fieldset>
 
 </body>
