--- a/webapp/views/LogIn.hbs
+++ b/webapp/views/LogIn.hbs
@@ -24,7 +24,7 @@
 		
         <input type="submit" value="Отправить" size="40" />
 	</fieldset>
-
+<p><a href="/registr">Регистрация</a></p>
 </body>
 
 </html>
