--- a/webapp/views/MainPage.hbs
+++ b/webapp/views/MainPage.hbs
@@ -94,15 +94,7 @@ border-bottom: 0;
 border-radius: 0;
 }
 .p_menu{position: relative;}
-.v_menu{
-position: absolute;
-width: 100%;
-left: 100%;
-top: -9999px;
-opacity: 0;
-border-left: 10px solid transparent;
-transition: 0.5s opacity;
-}
+
 .p_menu:hover .v_menu{
 opacity: 1;
 top: 0;
@@ -147,42 +139,19 @@ padding: 20px;
 </div>
 <div class="sidebar">
 <ul class="menu">
-<li class="p_menu"><a href="#">Слабоалкогогольные напитки </a>
-<ul class="v_menu">
-<li><a href="#">Пиво</a></li>
-<li><a href="#">Сидр</a></li>
-<li><a href="#">Збитень</a></li>
-</ul>
+<li class="p_menu"><a href="/show">Слабоалкогогольные напитки </a>
 </li>
 
 <li class="p_menu"><a href="#">Среднеалкогольные напитки</a>
-<ul class="v_menu">
-<li><a href="#">Белое вино</a></li>
-<li><a href="#">Красное вино</a></li>
-<li><a href="#">Шампанское</a></li>
-<li><a href="#">Медовуха</a></li>
-</ul>
+
 </li>
 
 <li class="p_menu"><a href="#">Крепкие напитки</a>
-<ul class="v_menu">
-<li><a href="#">Водка</a></li>
-<li><a href="#">Коньяк</a></li>
-<li><a href="#">Виски</a></li>
-<li><a href="#">Бренди</a></li>
-<li><a href="#">Ром</a></li>
-<li><a href="#">Джин</a></li>
-</ul>
+
 </li>
 
 <li class="p_menu"><a href="#">Коктейли</a>
-<ul class="v_menu">
-<li><a href="#">Голубая Лагуна</a></li>
-<li><a href="#">Маргорита</a></li>
-<li><a href="#">ПиноКолада</a></li>
-<li><a href="#">Мохито</a></li>
-<li><a href="#">Дайкири</a></li>
-</ul>
+
 </li>
 
 </ul>
