--- a/webapp/views/showcat.hbs
+++ b/webapp/views/showcat.hbs
@@ -5,11 +5,22 @@
     <meta charset="utf-8" />
 </head>
 <body>
-     
+    <style>
+         pre {
+  white-space: pre-wrap;
+  overflow: auto;
+  border: 1px dotted red;
+  width: 82ch;
+  float: inherit;
+  margin: .5em;
+  min-height: 7em;
+}
+    </style>
+    
     <h1>{{title}}</h1>
      
     
-    <p>{{content}}</p>
+    <pre>{{content}}</pre>
     
 </body>
 <html>
