--- a/webapp/views/MainPage.hbs
+++ b/webapp/views/MainPage.hbs
@@ -139,18 +139,18 @@ padding: 20px;
 </div>
 <div class="sidebar">
 <ul class="menu">
-<li class="p_menu"><a href="/show">Слабоалкогогольные напитки </a>
+<li class="p_menu"><a href="/show1">Слабоалкогогольные напитки </a>
 </li>
 
-<li class="p_menu"><a href="#">Среднеалкогольные напитки</a>
-
-</li>
-
-<li class="p_menu"><a href="#">Крепкие напитки</a>
+<li class="p_menu"><a href="/show2">Среднеалкогольные напитки</a>
 
 </li>
 
-<li class="p_menu"><a href="#">Коктейли</a>
+<li class="p_menu"><a href="/show3">Крепкие напитки</a>
+
+</li>
+
+<li class="p_menu"><a href="/show4">Коктейли</a>
 
 </li>
 
